[package]
name = "leaf"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
futures = "0.3"
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.0", features = ["derive", "std", "help", "usage", "error-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
textdistance = "1.1.1"
memmap2 = "0.9.5"
tempfile = "3.8"
indicatif = "0.17"
crossbeam-channel = "0.5"
num_cpus = "1.16" # Added for determining number of CPUs
ahash = "0.8" # Added
tokio-util = { version = "0.7", features = ["io"] } # Added
humantime = "2.1" # Added
parking_lot = "0.12" # Added

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"] }

[[bench]]
name = "clustering_benchmark"
harness = false